// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Collapsible > Snapshot Tests > matches snapshot for default collapsible 1`] = `
<div>
  <div
    data-state="closed"
  >
    <button
      aria-controls="radix-_r_0_"
      aria-expanded="false"
      data-state="closed"
      type="button"
    >
      Toggle
    </button>
    <div
      data-state="closed"
      hidden=""
      id="radix-_r_0_"
      style=""
    />
  </div>
</div>
`;

exports[`Collapsible > Snapshot Tests > matches snapshot for open collapsible 1`] = `
<div>
  <div
    data-state="open"
  >
    <button
      aria-controls="radix-_r_1_"
      aria-expanded="true"
      data-state="open"
      type="button"
    >
      Toggle
    </button>
    <div
      data-state="open"
      id="radix-_r_1_"
      style="transition-duration: 0s; animation-name: none;"
    >
      Content
    </div>
  </div>
</div>
`;
